# GABE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gamestate_integration_gabe.cfg
data/templateDigits/: templateDigits.gabe
data/yolo/cs1/: README.dataset.txt  README.roboflow.txt  data.yaml
data/yolo/cs1/train/labels/: 0000_png.rf.fb4eb1f9584c9c09fd55648e46ad4c9f.txt  0001_png.rf.78596d897525024f3d5f19bc3823c681.txt  0002_png.rf.af72bd4ede0e887d5067076945733fa1.txt  0003_png.rf.31e2d61d48f7f1c3212902c17afec66a.txt  0004_png.rf.8a33b186a16d7fbd505ceba547230973.txt  0005_png.rf.f76be5f9e36fee69ff63f7eea7360511.txt  0014_png.rf.e01a08d48f3850b1ee3c17cdc8e196ba.txt  0015_png.rf.af082e07ca045b7bd1cd24f1dece5827.txt  0016_png.rf.8e6595d41a6160338aeeccb1a4deb51e.txt  0017_png.rf.68460390aa2d5825f9e639d1a7140761.txt  0018_png.rf.4ac5fda9b0a621d6eefeb288c0939381.txt  0019_png.rf.918feed96e7edf44ef327f3d8e32467b.txt  0100_png.rf.5b9485f70fb58285a56620f14df5a7d4.txt  0108_png.rf.54eaa3a784254357cb608ca2c636fd46.txt  0109_png.rf.b075f24c0aa5917b873e605e7dc00e45.txt  0110_png.rf.49600e5fe048ed09adf3a608316a095f.txt  0111_png.rf.6bae9485416bb46a0dec90b326e7f0b1.txt  0112_png.rf.11ebcc827d70e3e29e05150dbf7fb2b8.txt  0113_png.rf.e9167b9886958180486383d07687672b.txt  0114_png.rf.5b83064e1903285f20dd57f9ccd4dd0a.txt  (+564 more)
scripts/: find_csXwindow.sh
scripts/objectDetection/: objectDetection.py
src/: types.hpp
src/engine/: DecisionTree.hpp  Engine.hpp  Exceptions.hpp  GameState.hpp  Inventory.hpp  Map.hpp  Movement.hpp  Path.hpp  Weapon.hpp
src/event/: Event.hpp  Exceptions.hpp
src/gameStateIntegrator/: Integrator.hpp  Inventory.hpp  JsonUpdatable.hpp  Player.hpp  Round.hpp
src/multithreaded/runnable/: Runnable.hpp
src/multithreaded/synchronizer/: Synchronizer.hpp
src/neural_net/: NeuralNetwork.hpp  ObjectRecognition.hpp
src/neural_net/initialization/: InitializationScheme.hpp
src/neural_net/layer/: ConvolutionalLayer.hpp  Layer.hpp  LayerTraits.hpp
src/positionReader/: Exceptions.hpp  PositionReader.hpp
src/server/: Server.cpp  Server.hpp
src/server/exceptions/: Exceptions.hpp
src/server/httpMessage/: HttpMessage.cpp  HttpMessage.hpp
src/server/socket/: Socket.cpp  Socket.hpp
src/server/thread/: Thread.cpp  Thread.hpp
src/utils/concepts/: Concepts.hpp
src/utils/data/: Data.hpp
src/utils/data/dataLoader/: DataLoader.hpp
src/utils/dataLoader/: DataLoader.hpp
src/utils/logger/: Logger.hpp
src/utils/math/function/: Function.hpp  FunctionTraits.hpp
src/utils/math/geometry/: Geometry.hpp
src/utils/math/linearArray/: LinearArray.hpp  LinearArrayTraits.hpp
src/utils/math/linearMatrix/: LinearMatrix.hpp
src/utils/math/predicates/: Predicates.hpp
src/utils/objectDetection/: Exceptions.hpp  ObjectDetectionController.hpp
src/utils/positionReader/: Exceptions.hpp  PositionReader.hpp
src/utils/positionReader/deprecated/: PositionReader.hpp
src/windowController/: Exceptions.hpp  WindowController.hpp
test/featuretest/: CMakeLists.txt  ConvolutionalDeepBackPropagationTest.cpp  DeepBackPropagationTest.cpp
test/featuretest/datasets/seeds/: seeds_dataset.txt
test/unittest/: BoundingBoxTest.cpp  CMakeLists.txt  ConvNetTest.cpp  DataLoaderTest.cpp  DeepBackPropagationTest.cpp  FunctionTest.cpp  LayerInitializationTest.cpp  LayerTest.cpp  LinearArrayTest.cpp  LinearMatrixTest.cpp  NeuralNetTest.cpp  ObjectDetection.cpp  PointTest.cpp  PredicatesTest.cpp  UnitTest.cpp
(+176 files in other folders)
